--- a/SistemaInventario/Areas/Admin/Views/Empleado/Index.cshtml
+++ b/SistemaInventario/Areas/Admin/Views/Empleado/Index.cshtml
@@ -6,11 +6,11 @@
 
 <div class="row">
     <div class="col-lg-6">
-        <h2 class="text-primary">Lista de Productos</h2>
+        <h2 class="text-primary">Lista de Empleados</h2>
     </div>
     <div class="col-lg-6">
             <a class="btn btn-outline-primary" asp-action="Upsert">
-            <i class="bi bi-plus-square-fill m-1"></i>Crear nuevo Producto
+            <i class="bi bi-plus-square-fill m-1"></i>Crear nuevo Empleado
         </a>
     </div>
 </div>
@@ -19,12 +19,13 @@
     <table id="tblDatos" class="table table-responsive table-hover">
         <thead class="table-dark">
             <tr>
-                <th>Número de Serie</th>
-                <th>Descripción</th>
-                <th>Categoria</th>
-                <th>Marca</th>
-                <th>Precio</th>
-                <th>Estado</th>
+                <th>Apellido Paterno</th>
+                <th>Apellido Materno</th>
+                <th>Nombre</th>
+                <th>Direccion</th>
+                <th>Telefono</th>
+                <th>Area</th>
+                <th>Puesto</th>
                 <th></th>
             </tr>
         </thead>
@@ -33,6 +34,6 @@
 
 
 @section Scripts{
-    <script src="~/js/producto.js"></script>
+    <script src="~/js/empleado.js"></script>
 }
 
