--- a/SistemaInventario/Areas/Admin/Views/Lugar/Index.cshtml
+++ b/SistemaInventario/Areas/Admin/Views/Lugar/Index.cshtml
@@ -6,11 +6,11 @@
 
 <div class="row">
     <div class="col-lg-6">
-        <h2 class="text-primary">Lista de Productos</h2>
+        <h2 class="text-primary">Lista de Areas</h2>
     </div>
     <div class="col-lg-6">
             <a class="btn btn-outline-primary" asp-action="Upsert">
-            <i class="bi bi-plus-square-fill m-1"></i>Crear nuevo Producto
+            <i class="bi bi-plus-square-fill m-1"></i>Crear nueva Area
         </a>
     </div>
 </div>
@@ -19,11 +19,8 @@
     <table id="tblDatos" class="table table-responsive table-hover">
         <thead class="table-dark">
             <tr>
-                <th>Número de Serie</th>
                 <th>Descripción</th>
-                <th>Categoria</th>
-                <th>Marca</th>
-                <th>Precio</th>
+                <th>Turno</th>
                 <th>Estado</th>
                 <th></th>
             </tr>
@@ -33,6 +30,6 @@
 
 
 @section Scripts{
-    <script src="~/js/producto.js"></script>
+    <script src="~/js/lugar.js"></script>
 }
 
