--- a/SistemaInventario/Views/Shared/_Layout.cshtml
+++ b/SistemaInventario/Views/Shared/_Layout.cshtml
@@ -39,7 +39,11 @@
                                 <li><a class="dropdown-item" asp-area="Admin" asp-controller="Bodega" asp-action="Index">Bodegas</a></li>
                                 <li><a class="dropdown-item" asp-area="Admin" asp-controller="Categoria" asp-action="Index">Categorias</a></li>
                                 <li><a class="dropdown-item" asp-area="Admin" asp-controller="Marca" asp-action="Index">Marcas</a></li>
-                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Producto" asp-action="Index">Producto</a></li>
+                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Producto" asp-action="Index">Productos</a></li>
+
+                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Lugar" asp-action="Index">Areas</a></li>
+                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Puesto" asp-action="Index">Puestos</a></li>
+                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Empleado" asp-action="Index">Empleados</a></li>
                             </ul>
                         </li>
 
